<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoneyAssistant</string>
    <string name="come_back_home">回到主页</string>
    <string name="check_outcome">浏览支出</string>
    <string name="check_income">查看收入</string>
    <string name="make_budget">制定预算</string>
    <string name="make_investment">投资理财</string>
    <string name="manage_lending">管理借贷</string>
    <string name="personal_config">个人设置</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="inject_data">InjectData</string>
    <string name="inject_income_data">InjectIncomeData</string>
    <string name="inject_budget_data">InjectBudgetData</string>

    <!-- home view -->
    <string name="money_unit">元</string>
    <string name="today_budget">今日预算消费</string>
    <string name="today_expenditure">今日已消费</string>
    <string name="today_income">今日收入</string>
    <string name="income_details">明细</string>
    <string name="month_line_chart">本月收支曲线图</string>
    <string name="add_an_item">add an Item</string>
    <string name="add_income_item">+ 收入</string>
    <string name="add_outcome_item">+ 支出</string>
    <string name="title_activity_outcome_within_day">OutcomeWithinDayActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="use_location">使用定位</string>
    <string name="use_input">手动输入</string>
    <string name="use_camera">相机</string>
    <string name="use_album">图库</string>
    <string name="crop_image">调整图片</string>

    <string-array name="outcome_type">
        <item>一般</item>
        <item>饮食</item>
        <item>交通</item>
        <item>教育</item>
        <item>约会</item>
        <item>化妆</item>
        <item>数码</item>
        <item>衣着</item>
        <item>家具</item>
        <item>娱乐</item>
    </string-array>

    <string-array name="income_type">
        <item>工资</item>
        <item>债券</item>
        <item>股票</item>
        <item>房租</item>
        <item>赠送</item>
        <item>买卖</item>
    </string-array>

    <string name="show"></string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="equal">=</string>
    <string name="plusOrminus">+/-</string>
    <string name="decimalpoint">.</string>
    <string name="square">x²</string>
    <string name="radicals">√x</string>
    <string name="clears">back</string>
    <string name="clearAll">clear</string>

    <string name="monthTitleFont">roboto_light</string>
    <string name="dayOfWeekFont">roboto_regular</string>
    <string name="dayOfMonthFont">roboto_light</string>
    <string name="currentDayOfMonthFont">roboto_light</string>

    <string name="focus">焦点</string>
    <string name="stocks">股票</string>
    <string name="company_on_marked">上市公司</string>
    <string name="image_content">Image</string>
    <string name="title_activity_stock_news_content">MoneyAssistant</string>

</resources>
