<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/action_settings"
        android:title="@string/inject_data"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_income"
        android:title="@string/inject_income_data"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_budget"
        android:title="@string/inject_budget_data"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_add"
        android:icon="@drawable/ic_add"
        android:title="@string/add_an_item"
        app:showAsAction="ifRoom"/>
</menu>
