<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment"
    android:background="@color/gray_bg"
    android:scrollbars="none"
    android:orientation="vertical">
    <!--horizontal layout-->

    <LinearLayout
        android:id="@+id/ll_no_budget_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:visibility="gone">
        <LinearLayout
            android:id="@+id/ll_no_today_budget"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:visibility="visible">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:gravity="center_vertical"
                android:text="今天没有支出预算哦..."
                android:textColor="@color/instr_text_color"
                android:textSize="@dimen/intr_text_size"
                android:layout_marginLeft="@dimen/inside_layout_margin"
                android:layout_marginStart="@dimen/inside_layout_margin"/>
            <TextView
                android:id="@+id/tv_add_budget"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:text=">"
                android:textSize="@dimen/button_text_size"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:layout_marginTop="@dimen/small_line_margin">
            <TextView
                android:id="@+id/tv_show_famous_words"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="鼓励的话"
                android:textSize="@dimen/intr_text_size"
                android:textColor="@color/instr_text_color"
                android:layout_marginLeft="@dimen/inside_layout_margin"
                android:gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_show_budget_panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:visibility="visible">
        <LinearLayout
            android:id="@+id/ll_show_budget_money"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:layout_weight="1"
            android:visibility="visible">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today_budget"
                    android:gravity="center_vertical"
                    android:textColor="@color/instr_text_color"
                    android:textSize="@dimen/intr_text_size"
                    android:layout_marginLeft="@dimen/inside_layout_margin"
                    android:layout_marginStart="@dimen/inside_layout_margin"
                    android:layout_centerVertical="true"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true">
                    <TextView
                        android:id="@+id/tv_budget_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="56"
                        android:textSize="@dimen/content_text_size"
                        android:textColor="@color/content_text_color"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/money_unit"
                        android:textSize="@dimen/intr_text_small_size"
                        android:textColor="@color/money_unit_text_color"
                        android:layout_marginLeft="@dimen/money_unit_margin"
                        android:layout_marginStart="@dimen/money_unit_margin"/>
                </LinearLayout>
            </RelativeLayout>
            <TextView
                android:id="@+id/tv_check_budget"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text=">"
                android:textSize="@dimen/button_text_size"
                android:gravity="center"/>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/small_line_margin"
            android:background="@color/white">
             <com.oliver.moneyassistant.ui.utils.NumberProgressBar
                 android:id="@+id/pb_show_budget_progress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:padding="20dp"
                 style="@style/NumberProgressBar_Default"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/intr_text_small_size"
                android:layout_marginLeft="@dimen/inside_layout_margin"
                android:text="From"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/intr_text_small_size"
                android:layout_marginRight="@dimen/inside_layout_margin"
                android:text="To"
                android:layout_alignParentRight="true"/>
            <TextView
                android:id="@+id/tv_budget_from_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2015/3/23"
                android:textSize="@dimen/intr_text_small_size"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/inside_layout_margin"/>
            <TextView
                android:id="@+id/tv_budget_to_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/intr_text_small_size"
                android:text="2015/04/01"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="@dimen/inside_layout_margin"/>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
         android:id="@+id/ll_check_outcome"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/white"
         android:layout_weight="1"
         android:layout_marginTop="@dimen/outside_layout_margin"
         android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6">
            <TextView
                android:id="@+id/tv_intr_today_outcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_expenditure"
                android:textColor="@color/instr_text_color"
                android:textSize="@dimen/intr_text_size"
                android:layout_marginLeft="@dimen/inside_layout_margin"
                android:layout_marginStart="@dimen/inside_layout_margin"
                android:layout_centerVertical="true"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true">
                <TextView
                    android:id="@+id/tv_today_outcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="56"
                    android:textSize="@dimen/content_text_size"
                    android:textColor="@color/content_text_color"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money_unit"
                    android:textSize="@dimen/intr_text_small_size"
                    android:textColor="@color/money_unit_text_color"
                    android:layout_marginLeft="@dimen/money_unit_margin"
                    android:layout_marginStart="@dimen/money_unit_margin"/>
            </LinearLayout>
        </RelativeLayout>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text=">"
            android:textSize="@dimen/button_text_size"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_check_today_income"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/small_line_margin"
        android:orientation="horizontal">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_weight="6">
            <TextView
                android:id="@+id/tv_intr_today_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_income"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:textColor="@color/instr_text_color"
                android:layout_marginLeft="@dimen/inside_layout_margin"
                android:layout_marginStart="@dimen/inside_layout_margin"
                android:textSize="@dimen/intr_text_size"/>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true">
                <TextView
                    android:id="@+id/tv_today_income_money"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="56"
                    android:textSize="@dimen/content_text_size"
                    android:textColor="@color/content_text_color"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money_unit"
                    android:textSize="@dimen/intr_text_small_size"
                    android:textColor="@color/money_unit_text_color"
                    android:layout_marginLeft="@dimen/money_unit_margin"/>
                </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_check_income"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text=">"
                android:textSize="@dimen/button_text_size"/>
        </RelativeLayout>
        </LinearLayout>
   <!-- <LinearLayout
        android:id="@+id/ll_outcome_month_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_weight="5"
        android:layout_marginTop="@dimen/outside_layout_margin">
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lc_expenditure_line_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <com.github.mikephil.charting.charts.ScatterChart
            android:id="@+id/sc_expenditure_scatter_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>
    </LinearLayout>-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginTop="@dimen/outside_layout_margin"
        android:background="@color/white">
        <android.support.v4.view.ViewPager
            android:id="@+id/vp_calendar_chart_card"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:id="@+id/pager_indicator_view_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">
            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>
</LinearLayout>